--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         background-color: white;
         width: 400px;
     }
+    .title{
+        font-size: 20px;
+        margin-left: 100px;
+    }
     #output{
         border: 1px solid;
         border-color: #cccccc;
@@ -27,13 +31,14 @@
 </head>
 <body>
     <div class="bgform mx-auto mt-5 shadow-lg p-3 mb-5 bg-white rounded p-4">
+            <label class="title font-weight-bold">Life in Weeks</label><br>
             <label for="inputAge">Age:</label>
-            <input type="number" onfocus="this.value=''" class="form-control" id="inputAge" placeholder="Type your Age" min="1"required>
+            <input type="number" onfocus="this.value=''" class="form-control" id="inputAge" placeholder="Type your Age">
             <label class="mt-3">Output:</label>
             <p id="output" class="rounded"></p>
-            <button type="submit" onclick="lifeInWeeks()" class="btn btn-primary btn-lg btn-block"">Submit</button>
+            <button type="submit" onclick="lifeInWeeks()" class="btn btn-primary btn-lg btn-block">Submit</button>
     </div>
-    
+
     <script>
     	function lifeInWeeks(){    
                
@@ -42,12 +47,20 @@
         var weeksLeft = (52 * 90) - (age * 52);
         var monthsLeft = (12 * 90) - (age * 12);
 
-        if(age > 0 && age <= 90){
+        if(age > 0){ 
           document.getElementById("output").innerHTML = "You have " + daysLeft + " days, " + weeksLeft + " weeks, and " + monthsLeft + " months left.";
-            }else{
-                alert("Enter age less than 90");
-            }
         }
+        else{
+            alert("Enter age more than 0");
+        }
+
+        if(age <= 90){
+            document.getElementById("output").innerHTML = "You have " + daysLeft + " days, " + weeksLeft + " weeks, and " + monthsLeft + " months left.";
+        }
+        else{
+            alert("Enter age more than 90");
+        }
+    }
     </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
